[package]
name = "rboy"
version = "0.1.0"
authors = [ "mvdnes <git@mathijs.vd-nes.nl>" ]
edition = "2018"

[dependencies]
blip_buf = ">=0.1.3"
clap = {version = "4", optional = true}
cpal = {version = "0.15", optional = true}
glium = {version = "0.34", optional = true}
winit = {version = "0.29", optional = true}

[features]
bin_required = ["clap","cpal","glium","winit"]

[[bin]]
name = "rboy"
test = false
doc = false
required-features = ["bin_required"]

[profile.release]
lto = true
